# crashFix

./: .gitignore  compile_crashfix.sh
crashfix_service/: CMakeLists.txt
crashfix_service/daemon/: CMakeLists.txt  Daemon.cpp  Daemon.h  ServerThread.cpp  ServerThread.h  SocketServer.cpp  SocketServer.h  stdafx.h
crashfix_service/daemon_tests/: CMakeLists.txt
crashfix_service/dumper/: CMakeLists.txt  dumper.cpp  stdafx.h
crashfix_service/libdumper/: BasePdbStream.cpp  BasePdbStream.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Config.cpp  CrashDescReader.cpp  CrashDescReader.h  CrashReportReader.cpp  CrashReportReader.h  FileFinder.cpp  FileFinder.h  FileMapping.cpp  FileMapping.h  Log.cpp  Log.h  MiniDumpReader.cpp  MiniDumpReader.h  Misc.cpp  Misc.h  MsfFile.cpp  MsfFile.h  MsfStream.cpp  MsfStream.h  Outputter.cpp  Outputter.h  PdbCache.cpp  PdbCache.h  PdbCompilandStream.cpp  PdbCompilandStream.h  PdbDebugInfoStream.cpp  PdbDebugInfoStream.h  PdbHeadersStream.cpp  PdbHeadersStream.h  PdbLinkInfoStream.cpp  PdbLinkInfoStream.h  PdbReader.cpp  PdbReader.h  (+19 more)
crashfix_service/libdumper_tests/: CMakeLists.txt  ExecuteHang.cpp  ExecuteTest.cpp  stdafx.h
crashfix_webapp/: index.php
crashfix_webapp/css/: main.css  screen.css
crashfix_webapp/protected/commands/: PollCommand.php
crashfix_webapp/protected/components/: Daemon.php  MainMenuPortlet.php  MiscHelpers.php
crashfix_webapp/protected/config/: .gitignore  common.php  console.php  main.php  user_params.ini.template
crashfix_webapp/protected/controllers/: BinaryFileController.php  CrashReportController.php  DebugInfoController.php
crashfix_webapp/protected/data/: .gitignore
crashfix_webapp/protected/framework/web/: CHttpRequest.php  CUploadedFile.php
crashfix_webapp/protected/migrations/: m180709_185600_add_crashgroup_deleteCount.php  m181010_180000_add_crashreport_username.php  m181011_044000_update_crashreport_exe_image.php  m190401_000000_add_pending_delete.php  m190423_000000_drop_tables.php  m190429_000000_remove_deleteCount.php  m190430_000000_drop_table_debugInfo.php  m190514_000000_add_crashreport_fields.php
crashfix_webapp/protected/models/: BinaryFile.php  CrashGroup.php  CrashReport.php  DebugInfo.php  ProcessingError.php  Project.php
crashfix_webapp/protected/vendors/: SevenZipArchive.php
crashfix_webapp/protected/views/binaryFile/: index.php  uploadFile.php
crashfix_webapp/protected/views/crashGroup/: index.php
crashfix_webapp/protected/views/crashReport/: _reportList.php  _viewSummary.php  view.php
crashfix_webapp/protected/views/debugInfo/: index.php  uploadFile.php
crashfix_webapp/protected/views/layouts/: column2.php  main.php
crashfix_webapp/protected/views/mail/: index.php
crashfix_webapp/protected/views/project/: index.php  view.php
crashfix_webapp/protected/views/site/: daemon.php  index.php
crashfix_webapp/protected/views/user/: index.php  view.php
crashfix_webapp/protected/views/userGroup/: index.php
